--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" type="image/x-icon" href="favicon.ico">
+  <link rel="canonical" href="https://the-boss-of-sauce.herokuapp.com"/>
   <script src="https://kit.fontawesome.com/9058b84128.js" crossorigin="anonymous"></script>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
